2006-02-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/common.h : compatibility changes to make it
	compile with Python 2.3
	* interfaces/python/graphobject.h : slight documentation corrections
	* interfaces/python/graphobject.c : added igraphmodule_Graph_write_graphml
	* interfaces/python/igraphmodule.c : added function for replacing
	progress handler
	* src/progress.c : now the default progress handler is empty
	* src/layout.c : reports progress of KK and FR layout
	* src/other.c : added function to calculate convex hull
	* tests/testsuite.at, tests/other.at : added test case for
	convex hulls
	* examples/simple/igraph_convex_hull.c,
	examples/simple/igraph_convex_hull.out : added
	
2006-02-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_union, igraph_union_many) : added

2006-02-23  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.h,
	interfaces/python/graphobject.c : added interface for igraph_rewire
	and igraph_write_graphml
	* examples/simple/igraph_rewire.c,
	examples/simple/igraph_rewire.out : added test case for igraph_rewire
	* src/foreign.c : added igraph_write_graphml, extended
	igraph_read_graphml to parse attribute data (but don't store it)
	* Makefile.am : separated documentation targets
	* src/error.c : added some debug statements
	* src/structural_properties.c : added igraph_rewire
	* examples/simple/test.gxl : replaced with a graph containing
	attributes
	* examples/simple/graphml.c : now tests igraph_write_graphml
	* examples/simple/graphml.out : adjusted to test.gxl output
	* src/topology.c : replaced class argument name to make it compile
	with g++ as well

2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_ncol) : added directed argument
	* interfaces/python/graphobject.c : updated

2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_merge_dla, igraph_i_layout_sphere_2d)